manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
      component: backend
  template:
    metadata:
      labels:
        app: docs
        component: backend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: docs
          image: lasuite/impress-backend:v2.0.0
          securityContext:
            runAsUser: 0
          command:
            - gunicorn
            - -c
            - /usr/local/etc/gunicorn/impress.py
            - impress.wsgi:application
            - --reload
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8000
            initialDelaySeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /__lbheartbeat__
              port: 8000
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 300m
              memory: 4Gi
              ephemeral-storage: "2Gi"
