manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
      component: frontend
  template:
    metadata:
      labels:
        app: docs
        component: frontend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: docs
          image: lasuite/impress-frontend:v2.2.0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
              ephemeral-storage: "2Gi"
