manifests/deployment-yprovider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-yprovider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
      component: yprovider
  template:
    metadata:
      labels:
        app: docs
        component: yprovider
    spec:
      automountServiceAccountToken: false
      containers:
        - name: docs
          image: lasuite/impress-y-provider:v2.1.0
          ports:
            - name: http
              containerPort: 4444
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: 4444
            initialDelaySeconds: 10
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 500m
              memory: 4Gi
              ephemeral-storage: "2Gi"
