manifests/service-mailcatcher.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mailcatcher
spec:
  ports:
    - port: 1025
      protocol: TCP
      targetPort: 1025
      name: smtp
    - port: 1080
      protocol: TCP
      targetPort: 1080
      name: http
  selector:
    app: mailcatcher
  type: ClusterIP
