manifests/service-yprovider.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-yprovider
spec:
  ports:
    - port: 4444
      protocol: TCP
      targetPort: 4444
  selector:
    app: docs
    component: yprovider
  type: ClusterIP
