manifests/ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization, X-Amz-Date, X-Amz-Content-SHA256
    nginx.ingress.kubernetes.io/auth-url: https://docs.la-suite.apps.digilab.network/api/v1.0/documents/media-auth/
    nginx.ingress.kubernetes.io/rewrite-target: /impress-media-storage/$1
    nginx.ingress.kubernetes.io/upstream-vhost: svc-minio.la-suite.svc.cluster.local:9000
spec:
  rules:
    - host: "docs.la-suite.apps.digilab.network"
      http:
        paths:
          - path: "/media/(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-minio
                port:
                  number: 9000
  tls:
    - hosts:
        - docs.la-suite.apps.digilab.network
      secretName: docs-tls
